--- a/.github/workflows/edit2.yml
+++ b/.github/workflows/edit2.yml
@@ -2,7 +2,7 @@ name: Second Globally Enforced PR Checks
 
 on:
   pull_request:
-    branches: ['master']
+    branches: ['main'] 
     types: [opened, edited, synchronize, reopened]
 
 jobs:
