--- a/.github/workflows/edit.yml
+++ b/.github/workflows/edit.yml
@@ -2,7 +2,7 @@ name: Globally Enforced PR Checks
 
 on:
   pull_request:
-    branches: ['master']
+    branches: ['main']
     types: [opened, edited, synchronize, reopened]
 
 permissions:
